# embryo_ODE

./: .pre-commit-config.yaml  README.md  create_repo  epipeODE_demo.ipynb  hello.py  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
src/embryo/: __init__.py
src/epipeODE/: __init__.py  core.py  data_classes.py  dynamics.py  models.py  visualization.py
src/epipeODE/model/: __init__.py  geometrical_models.py
src/model/: geometrical_models.py
tests/: test_basic.py  test_data_classes.py  test_dynamics.py  test_models.py  test_visualization.py
