[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "embryo-ode"
version = "0.1.0"
description = "Developing a data-driven dynamic model of cell fate choice in mammalian embryogenesis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[tool.ruff]
line-length = 88
exclude = ["tests"]
